# skip-middle

./: .gitignore  LICENSE  README.md  help.txt  pyproject.toml
data/: download_fineweb_10B_gpt2.py  download_tinystories_gpt2.py
lab/: utils.py
lab/components/: activation_functions.py
lab/components/attention/: flex_attention.py  grouped_query_attention.py  utils.py
lab/components/feed_forward/: swiglu.py
lab/components/norm/: rms_norm.py
lab/components/positional_embeddings/: rope.py
lab/train/: data.py  optimizers.py  schedulers.py  tokenize.py  utils.py
projects/skip_middle/: .gitignore  gate_metrics.py  train_fineweb.py
projects/skip_middle/analysis/: estimate_flops.py  plot_flops_loss.py
projects/skip_middle/gate_controller/: __init__.py  adaptive.py  dummy.py  proportional.py  proportional_derivative.py  sparsity.py  sparsity_variance.py  sparsity_variance_l2.py  utils.py
projects/skip_middle/model/: __init__.py  config.py  huggingface.py  model.py  optimizer.py  utils.py
projects/skip_middle/scripts/: plot_flops_loss.sh  train_fineweb_baseline_bluepebble.sh  train_fineweb_baseline_isambardai.sh  train_fineweb_gated_bluepebble.sh  train_fineweb_gated_isambardai.sh  train_fineweb_nocontrol_bluepebble.sh  upload.sh
projects/skip_middle/train/: __init__.py  config.py  train.py
